updated W1D4 to W4D4 fixed Welcome component for mobile, updated styles for buttons and badges in light/dark mode, fixed CommentArea disappearing in mobile

--- a/M5/W1D4/src/components/allTheBooks/singleBook/commentArea/style.css
+++ b/M5/W1D4/src/components/allTheBooks/singleBook/commentArea/style.css
@@ -3,4 +3,5 @@
   top: 100px;
   max-height: calc(100vh - 100px);
   overflow: scroll;
+  padding-bottom: 20px;
 }
